# ceia-nlp2

./: .gitignore  CONVENTIONS.md  README.md  pyproject.toml
tp1/: TinyGPT.ipynb  TinyGPT.py
tp2/: cvs.txt  groq_streamlit_example.py
tp3/: agentic_cv.py  groq_streamlit_example.py  multi_agent_cv_analyzer.py  per_person_agent_analyzer.py  pinecone_indexer.py
