[project]
name = "nlp2"
version = "0.1.0"
description = ""
authors = [
    {name = "leo centurion",email = "centurionm.leo@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.13"
dependencies = [
    "tensorboard (>=2.19.0,<3.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pinecone (>=7.3.0,<8.0.0)",
    "streamlit (>=1.48.0,<2.0.0)",
    "groq (>=0.31.0,<0.32.0)",
    "transformers (>=4.55.0,<5.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-groq (>=0.3.7,<0.4.0)",
    "pypdf (>=5.9.0,<6.0.0)",
    "jupytext (>=1.17.2,<2.0.0)",
    "faker (>=37.5.3,<38.0.0)",
    "reportlab (>=4.4.3,<5.0.0)",
    "langgraph (>=0.6.5,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-gpu-src"}
torchvision = {source = "pytorch-gpu-src"}
torchaudio = {source = "pytorch-gpu-src"}

[tool.poetry]
package-mode=false

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
